02_alb_istio-ingress/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn":"arn:aws:cognito-idp:ap-northeast-2:596906176357:userpool/ap-northeast-2_mCAntIjRq","UserPoolClientId":"6h085hpvge24knrfnkpqrn7021",
      "UserPoolDomain":"kfusers.auth.ap-northeast-2.amazoncognito.com"}'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:596906176357:certificate/8ec567fd-fd03-4a57-b837-fead72c6d100
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/auth-idp-cognito":"{\"UserPoolArn\":\"\",\"UserPoolClientId\":\"\", \"UserPoolDomain\":\"\"}","alb.ingress.kubernetes.io/auth-type":"cognito","alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:ap-northeast-2:596906176357:certificate/8ec567fd-fd03-4a57-b837-fead72c6d100","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme":"internet-facin [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2021-09-26T07:25:57Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  labels:
    kustomize.component: istio-ingress
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:alb.ingress.kubernetes.io/auth-idp-cognito: {}
          f:alb.ingress.kubernetes.io/auth-type: {}
          f:alb.ingress.kubernetes.io/certificate-arn: {}
          f:alb.ingress.kubernetes.io/listen-ports: {}
          f:alb.ingress.kubernetes.io/scheme: {}
          f:alb.ingress.kubernetes.io/target-type: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
        f:finalizers:
          .: {}
          v:"ingress.k8s.aws/resources": {}
        f:labels:
          .: {}
          f:kustomize.component: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-09-26T07:25:57Z"
  name: istio-ingress
  namespace: istio-system
  resourceVersion: "753107"
  selfLink: /apis/extensions/v1beta1/namespaces/istio-system/ingresses/istio-ingress
  uid: 6043b47a-a5b5-4174-93b8-13e90320d32a
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
